--- a/index.html
+++ b/index.html
@@ -4,34 +4,31 @@
     <title>DevastMod</title>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="description" content="DevastMod by Elmas  |  Aim Bot Hack, Vision Hack, Build on Roads, Disabled Ads, See mines, camo and more" />
     <meta
-      name="description"
-      content="DevastMod by Elmas  |  Aim Bot Hack, Vision Hack, Build on Roads, Disabled Ads, See mines, camo and more"
-    />
-    <meta
-      name="keywords"
-      content="devast, devast.io, devastmod, devast io, devast.io script, scripts, vision, hack, zoom hack, build on roads, admin, github , modded, starve.io, hypr, hacked, .io, tampermonkey, javascript, greasyfork, wiki, cheat, cracked, surviv.io, survival, hypr clan, discord, rephlo, 2022, mod"
+    name="keywords"
+    content="devast, devast.io, devastmod, devast io, devast.io script, scripts, vision, hack, zoom hack, build on roads, admin, github , modded, starve.io, hypr, hacked, .io, tampermonkey, javascript, greasyfork, wiki, cheat, cracked, surviv.io, survival, discord, rephlo, 2022, mod"
     />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta property="og:title" content="DevastMod" />
-    <meta property="og:description" content="DevastMod by Elmas  |  Aim Bot Hack, Vision Hack, Build on Roads, Disabled Ads, See mines, camo and more"/>
-    <meta sproperty="og:url" content="https://elm4s.github.io/DevastMod/" />
+    <meta property="og:description" content="DevastMod" />
+    <meta property="og:url" content="https://devastmod.org/admin" />
     <meta property="og:site_name" content="DevastMod" />
     <meta
       property="og:image"
-      content="https://elm4s.github.io/DevastMod/img/DevastMod_banned.webp"
+      content="https://Elm4s0.github.io/DevastMod/img/DevastMod_banned.webp"
     />
     <meta property="og:image:width" content="500" />
     <meta property="og:image:height" content="282" />
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:site" content="@devastmod" />
     <meta name="twitter:creator" content="@Elmas" />
-    <meta name="twitter:url" content=https://elm4s.github.io/DevastMod/ />
+    <meta name="twitter:url" content="https://devastmod" />
     <meta name="twitter:title" content="DevastMod" />
-    <meta name="twitter:description" content="DevastMod by Elmas  |  Aim Bot Hack, Vision Hack, Build on Roads, Disabled Ads, See mines, camo and more"/>
+    <meta name="twitter:description" content="DevastMod" />
     <meta
       name="twitter:image"
-      content="https://elm4s.github.io/DevastMod/img/DevastMod_banned.webp"
+      content="https://Elm4s0.github.io/DevastMod/img/DevastMod_banned.webp"
     />
     <meta name="mobile-web-app-capable" content="yes" />
     <meta name="apple-mobile-web-app-capable" content="yes" />
@@ -74,18 +71,19 @@
         id="nicknameInput"
         type="text"
         placeholder="Nickname"
-        maxlength="16"
+        maxlength="15"
       />
+
       <input id="InvisField" type="text" placeholder="0" maxlength="0" />
       <input id="InvisField" type="text" placeholder="0" maxlength="0" />
       <input id="InvisField" type="text" placeholder="0" maxlength="0" />
       <input id="InvisField" type="text" placeholder="0" maxlength="0" />
 
       <input
-        id="passwordInputHIDDEN"
-        type="hidden"
+        id="passwordInput"
+        type="text"
         placeholder="Password"
-        maxlength="16"
+        maxlength="15"
       />
     </div>
 
@@ -107,13 +105,23 @@
         </div>
 
         <div id="changelogText">
-          <p><span style="color: #bcb33e"> </span></p>
-          <p><span style="color: #bcb33e"> </span></p>
+          <p><span style="color: #bcb33e"> Type: </span></p>
+          <p>Administrator</p>
         </div>
       </div>
     </div>
 
     <div id="howtoplay">
+      <iframe
+        src="https://discord.com/widget?id=1009174265272221807&theme=dark"
+        width="270"
+        height="430"
+        allowtransparency="true"
+        frameborder="0"
+        sandbox="allow-popups allow-popups-to-escape-sandbox allow-same-origin allow-scripts"
+        title="Discord"
+      ></iframe>
+
       <div id="howtoplayTitle"></div>
 
       <div id="howtoplayText"></div>
